# buzz_weekly_crew

./: .env.example  .gitignore  README.md  pyproject.toml  trained_agents_data.pkl  training_data.pkl
src/buzz_weekly_crew/: crew.py  main.py
src/buzz_weekly_crew/config/: agents.yaml  tasks.yaml
src/buzz_weekly_crew/tools/: browser_tools.py  social_tools.py
